[package]
name = "lambda-oauth"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
airtable-flows = { path = "../../../airtable-flows/airtable-sdk" }
lambda-flows = { path = "../../../lambda-flows/lambda-sdk" }
serde_json = "1.0"
http_req_wasi = "0.10"
urlencoding = "2"
